# disktree

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
docs/plans/disk-scanner/: 2026-03-04-spec.md
docs/plans/github-release/: 2026-03-04-spec.md
src/: highlight.rs  main.rs  scanner.rs  trash.rs
src/ui/: mod.rs  statusbar.rs  tree.rs
