[package]
name = "disk-tree"
version = "1.0.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "disk-tree"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
rayon = "1"
bytesize = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
